Polish and fix some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ input[type="button"] {
 
 input.save_tab {
     background-color: rgb(17, 34, 204);
-    border-radius: 0.8em;
+    border-radius: 0.4em;
     color: #fff;
     padding: 0.4em 0.8em;
 }
@@ -54,7 +54,12 @@ input.save_all {
     margin-bottom: 0.4em;
 }
 
+.panel > footer {
+    margin: 1em 0;
+}
+
 .search input {
+    padding: 0.4em 0;
     width: 100%;
 }
 
